@@ -1,4 +1,5 @@
 # -*- coding: utf-8 -*-
+from plone import api
 from Products.Five import BrowserView
 from rer.bandi import bandiMessageFactory as _
 from zope.component import getUtility
@@ -41,6 +42,19 @@ class CollectionBandiView(BrowserView):
             # a default date for bandi that don't have a defined deadline
             return False
         return True
+
+    def getScadenzaDate(self, brain):
+        date = brain.getScadenza_bando
+        long_format = True
+        if brain.getScadenza_bando.Time() == '00:00:00':
+            # indexer add 1 day to this date, to make a bando ends at midnight
+            # of the day-after, if time is not provided
+            date = date -1
+            long_format = False
+        return api.portal.get_localized_time(
+            datetime=date,
+            long_format=long_format
+        )
 
     def getBandoState(self, bando):
         """
