@@ -5,73 +5,70 @@
   xmlns:metal="http://xml.zope.org/namespaces/metal"
   xmlns:i18n="http://xml.zope.org/namespaces/i18n"
   metal:use-macro="here/main_template/macros/master"
-  i18n:domain="rer.bandi"
 >
   <body>
     <metal:macro define-macro="collection-tile-macro"
-        tal:define="helper_view nocall:context/@@bandi_tile_helper;
+        tal:define="helper_view nocall:context/@@collection_bandi_view;
                     classes string:collectionTile ${view/data/css_class};">
 
       <h3 tal:define="title view/data/title|nothing;"
           class="tileTitle"
           tal:condition="title">${title}
       </h3>
-          <div class="tileBody">
-            <p tal:condition="not:results"
-               class="noResults"
-               i18n:translate="tiles_collection_noresults">
-             No results found
-            </p>
-            <ul class="tileContent" tal:condition="results">
-              <tal:results tal:repeat="obj results">
-
-                <div class="bandoInfos"
-                     tal:define="stato_bando python:helper_view.getBandoState(obj);">
-                     <div tal:condition="stato_bando"
-                           tal:define="stato_class python:stato_bando[0];
-                                       stato_str python:stato_bando[1]"
-                           tal:attributes="class string:state-${stato_class} bandoStateClass"
-                           tal:content="stato_str">
-                             stato
-                      </div>
-                      <h3 class="bandoTitle">
-                        <a class="bandoTitleLink" tal:attributes="href obj/getURL;title obj/Title"
-                           tal:content="obj/Title" />
-                	    </h3>
-
-                      <p class="bandoDescription"
-                		        tal:condition="python:obj.Description"
-                                tal:content="obj/Description" />
-                      <p class="bandoType"
-                         tal:define="show_bando_type string:tipologia_bando;
-                                     is_present python:show_bando_type in classes;
-                                     type python: helper_view.voc_tipologia(obj);"
-                		     tal:condition="is_present"
-                             tal:content="type" />
-
-                     <div class="bandoDates" tal:condition="python:(is_show_effective_visible or is_show_scadenza_bando_visible) and (obj.effective!='None' or obj.getScadenza_bando)"
-                          tal:define="show_effective string:effective;
-                                      is_show_effective_visible python:show_effective in classes;
-                                      show_scadenza_bando string:scadenza_bando;
-                                      is_show_scadenza_bando_visible python: show_scadenza_bando in classes;
-                                      has_effective_date python:helper_view.has_effective_date(obj);
-                                      valid_scadenza python:helper_view.isValidDeadline(obj.getScadenza_bando)">
-                         <tal:pubblicazione condition="python:is_show_effective_visible and has_effective_date">
-                             <div class="bando-data-pubblicazione">
-                                 <span  class="labelTB">Pubblicato il</span>:
-                                 <span tal:content="python:here.toLocalizedTime(obj.effective)" />
-                             </div>
-                         </tal:pubblicazione>
-                         <tal:scadenza_bando condition="python: valid_scadenza and is_show_scadenza_bando_visible">
-                              <div class="bando-data-scadenza">
-                                 <span  class="labelTB">Scadenza termini partecipazione</span>:
-                                 <span tal:content="python:toLocalizedTime(obj.getScadenza_bando, long_format=True)" />
-                             </div>
-                         </tal:scadenza_bando>
-                     </div>
-                </div>
-              </tal:results>
-            </ul>
+      <div class="tileBody" i18n:domain="rer.bandi">
+        <p tal:condition="not:results"
+           class="noResults"
+           i18n:translate="tiles_collection_noresults">
+         No results found
+        </p>
+        <ul class="tileContent" tal:condition="results">
+          <tal:results tal:repeat="obj results">
+            <div class="bandoInfos"
+                 tal:define="stato_bando python:helper_view.getBandoState(obj);">
+              <div tal:condition="stato_bando"
+                   tal:define="stato_class python:stato_bando[0];
+                               stato_str python:stato_bando[1]"
+                   tal:attributes="class string:state-${stato_class} bandoStateClass"
+                   tal:content="stato_str">
+                     stato
+              </div>
+              <h4 class="bandoTitle">
+                <a class="bandoTitleLink" tal:attributes="href obj/getURL;title obj/Title"
+                   tal:content="obj/Title" />
+        	    </h4>
+              <p class="bandoDescription"
+        		        tal:condition="python:obj.Description"
+                        tal:content="obj/Description" />
+              <p class="bandoType"
+                 tal:define="show_bando_type string:tipologia_bando;
+                             is_present python:show_bando_type in classes;
+                             type python: helper_view.getTipologiaTitle(obj.tipologia_bando);"
+        		     tal:condition="is_present"
+                     tal:content="type" />
+              <div class="bandoDates"
+                   tal:condition="python:(is_show_effective_visible or is_show_scadenza_bando_visible) and (obj.effective!='None' or obj.getScadenza_bando)"
+                   tal:define="show_effective string:effective;
+                               is_show_effective_visible python:show_effective in classes;
+                               show_scadenza_bando string:scadenza_bando;
+                               is_show_scadenza_bando_visible python: show_scadenza_bando in classes;
+                               has_effective_date python:obj.effective.Date() != '1969/12/31';
+                               valid_scadenza python:helper_view.isValidDeadline(obj.getScadenza_bando)">
+                <tal:pubblicazione condition="python:is_show_effective_visible and has_effective_date">
+                  <div class="bando-data-pubblicazione">
+                    <span class="labelTB" i18n:translate="bandi_published_on">Published on</span>:
+                    <span tal:content="python:here.toLocalizedTime(obj.effective)" />
+                  </div>
+                </tal:pubblicazione>
+                <tal:scadenza_bando condition="python: valid_scadenza and is_show_scadenza_bando_visible">
+                  <div class="bando-data-scadenza">
+                    <span  class="labelTB" i18n:translate="bando_scadenza_partecipazione">Deadline participation terms</span>:
+                    <span tal:content="python:helper_view.getScadenzaDate(obj)" />
+                  </div>
+                </tal:scadenza_bando>
+              </div>
+            </div>
+          </tal:results>
+        </ul>
         <div class="showMore" tal:condition="view/data/show_more">
           <a href="${collection/absolute_url}" tal:define="show_more_label view/data/show_more_label|nothing">
             <span tal:condition="not:show_more_label" i18n:translate="more_url">More&hellip;</span>
