@@ -4,8 +4,12 @@ Changelog
 3.0.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
+- Fix scadenza dates in views and tiles
+  [cekk]
+- Add menuitems entries
+  [cekk]
+- Fix collection view names
+  [cekk]
 
 3.0.4 (2018-01-29)
 ------------------
